--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "Personal Website of Dwight Doane",
   "main": "app.js",
   "dependencies": {
+    "resume-cli": "^1.1.2"
   },
   "devDependencies": {
     "browser-sync": "^2.13.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "browser-sync start --server --files \"*.html, css/*.css\""
+    "start": "browser-sync start --server --files \"*.html, css/*.css\"",
+    "serve-resume": "resume serve",
+    "resume:build": "resume export resume.html"
   },
   "repository": {
     "type": "git",
