--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "browser-sync start --server --files \"*.html, css/*.css\"",
     "serve-resume": "resume serve",
-    "resume:build": "resume export resume.html"
+    "resume:build": "resume export resume.html && resume export resume.pdf"
   },
   "repository": {
     "type": "git",
